# dsf2flac

./: .cproject  .project  CMakeLists.txt  ClicksAtStartAndEnd.md  ProjectHome.md  README.txt  TestingRev3.md  dsf2flac.mk  dsf2flac.project  dsf2flac.txt
doc/html/: annotated.html  classDopPacker-members.html  classDopPacker.html  classDsdDecimator-members.html  classDsdDecimator.html  classDsdSampleReader-members.html  classDsdSampleReader.html  classDsdiffFileReader-members.html  classDsdiffFileReader.html  classDsfFileReader-members.html  classDsfFileReader.html  classdop__packer-members.html  classdop__packer.html  classdsdDecimator-members.html  classdsdDecimator.html  classdsdSampleReader-members.html  classdsdSampleReader.html  classdsdiffFileReader-members.html  classdsdiffFileReader.html  classdsfFileReader-members.html  classdsfFileReader.html  classes.html  classfstreamPlus-members.html  classfstreamPlus.html  cmdline_8c.html  cmdline_8c_source.html  cmdline_8h.html  cmdline_8h_source.html  deprecated.html  dop__packer_8cpp.html  dop__packer_8cpp_source.html  dop__packer_8h.html  dop__packer_8h_source.html  dsd__decimator_8cpp.html  dsd__decimator_8cpp_source.html  dsd__decimator_8h.html  dsd__decimator_8h_source.html  dsd__sample__reader_8cpp.html  dsd__sample__reader_8cpp_source.html  dsd__sample__reader_8h.html  (+69 more)
doc/html/search/: all_61.js  all_63.js  all_64.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  all_7e.js  classes_64.js  classes_66.js  files_63.js  (+34 more)
scripts/: batch_dsf2flac.sh
src/: DSF2PCM.ggo  cmdline.c  cmdline.h  dop_packer.cpp  dop_packer.h  dsd_decimator.cpp  dsd_decimator.h  dsd_sample_reader.cpp  dsd_sample_reader.h  dsdiff_file_reader.cpp  dsdiff_file_reader.h  dsf2flac.doxyfile  dsf2flac_types.h  dsf_file_reader.cpp  dsf_file_reader.h  filters.cpp  fstream_plus.cpp  fstream_plus.h  main.cpp  tagConversion.cpp  tagConversion.h
